# BangumiDateProcessing

./: 1.txt  CMakeLists.txt  latest.json  main.cpp  public_date_124.db
.github/workflows/: Bangumi_Date_Processing.yml
